--- a/waifu.css
+++ b/waifu.css
@@ -6,31 +6,31 @@
   cursor: pointer;
   font-size: 12px;
   /* left: 0; */
-  right: 0;
+  left: 0;
   /* margin-left: -100px; */
-  margin-right: -90px;
+  margin-left: -100px;
   padding: 5px 2px 5px 5px;
   position: fixed;
   transition: margin-left 1s;
   width: 60px;
   /* writing-mode: vertical-rl; */
-  writing-mode: vertical-lr;
+  writing-mode: vertical-rl;
 }
 
 #waifu-toggle.waifu-toggle-active {
   /* margin-left: -50px; */
-  margin-right: -40px;
+  margin-left: -50px;
 }
 
 #waifu-toggle.waifu-toggle-active:hover {
   /* margin-left: -30px; */
-  margin-right: -20px;
+  margin-left: -30px;
 }
 
 #waifu {
   bottom: 0px;
   /* left: 0; */
-  right: 10px;
+  left: 0;
   line-height: 0;
   margin-bottom: -10px;
   position: fixed;
@@ -88,7 +88,7 @@
   opacity: 0;
   position: absolute;
   /* right: -10px; */
-  margin-left: 260px;
+  right: -10px;
   top: 70px;
   transition: opacity 1s;
 }
